# ESP-AP-STA-OTA-LED-remote-control-project

./: CMakeLists.txt  README.md  swagger.yaml
main/: CMakeLists.txt  http_server.c  http_server.h  io.c  io.h  main.c  nvs_utils.h  tasks_common.h  wifi_app.c  wifi_app.h  wifi_sta.c  wifi_sta.h
main/webpage/: app.css  app.js  index.html
